Add q pics and words for Van-dep-Pol.

--- a/p5/vdp_testsys.tex
+++ b/p5/vdp_testsys.tex
@@ -100,11 +100,11 @@ $ \varepsilon=2.65$, $U_{in}=1.2$, $\omega_{in}=0.27$.
 Например, на  рис.~\ref{atu:f:vdp_phase_f_complex}
 представлены результаты моделирования системы при
 $ \varepsilon=4.8$, $U_{in}=0.7$, $\omega_{in}=0.7$.
-С спектре системы наблюдаются участки с очень близко
-расположенными пиками. При недостаточной разрешающей способности,
+В спектре системы наблюдаются участки с очень близко
+расположенными пиками. При недостаточной разрешающей способности
 этот участок будет принят за зону сплошного спектра.
 Это может привести к выводу о хаотичности системы,
-тем более, если учесть вида аттрактора.
+тем более, если учесть вид аттрактора.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -138,11 +138,144 @@ $ \varepsilon=4.8$, $U_{in}=0.7$, $\omega_{in}=0.7$.
 
 \subsection{Анализ и выбор критериев}  % {{{2
 
-Критерий:
-$\overline{T}$ + люфт + sign.
+В отличие от систем Лоренца, Рёсслера и им подобных,
+у системы Ван-дер-Поля есть только одна наблюдаемая величина: $x$.
+Это сразу сильно ограничивает круг критериев, требующих анализа.
 
-Альтернативный критерий:
-$\overline{x^2}$
+На первый взгляд, если доступен сигнал $x(t)$,
+то можно вычислить сигналы $\dot{x}(t)$ и $\ddot{x}(t)$.
+После этого, подставив получившиеся зависимости в (\ref{atu:eq:vdp}),
+можно получить значение идентифицируемого параметра.
+На самом деле, это возможно только в случае практически полного отсутствия помех.
+Даже небольшой  (0.001\%) уровень ошибок измерения
+при вычислении производных, особенно второй,
+приводит к совершенно произвольным результатам.
+Таким образом, и для этой системы без применения
+интегральных критериев нет возможности создать работоспособную систему идентификации.
+
+Критерии $q_{x^2}$, $q_{rx}$ и $q_{|x|}$ отличаются
+для этой задачи непринципиально.
+Несмотря на то, что эти величины в данном конкретном случае не
+отображают какой-либо закон сохранения, их применение может быть оправданным~\cite{atu_asau17}.
+При росте параметра $\varepsilon$ система всё больше проявляет нелинейные свойства.
+Это выражается в том, что при одинаковой амплитуде сигнала
+зависимость $x(t)$ большую часть времени проводит вблизи
+амплитудных значений, что приводит к росту этих критериев.
+Для определённости в дальнейшем будем использовать $q_{x^2}$.
+
+Также имеет смысл рассмотреть достаточно очевидный для
+колебательных систем критерий $q_T$,
+заключающийся в измерении ``периода''~\cite{atu_asau16}.
+Очевидно, что понятие периода для хаотических систем неприменимо.
+Однако, можно принять за текущее значение периода
+интервал времени между двумя последовательными срабатываниями
+правильно настроенного триггера Шмидта, на вход которого подаётся сигнал
+$x(t)$. Этот подход используется при построении входных
+цепей частотомеров. При этом автоматически происходит усреднение
+на интервалах порядка этого ``периода''. Однако,
+для систем идентификации такое усреднение скорее всего будет
+недостаточным, особенно в хаотических и сложно-периодических
+режимах. Следовательно, имеет смысл использовать дополнительное
+усреднение, например~(\ref{atu:eq:qlin}).
+
+Рассмотрим характерные зависимости рассматриваемых критериев,
+полученные в результате моделирования динамики системы (\ref{atu:eq:vdp}).
+На  рис.~\ref{atu:f:vdp_q1} представлен вид этих зависимостей
+для различных условий.
+
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_q-p_q_0x30_0x27.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_q-p_q_1x20_0x6283185.png}
+\end{center}
+  \caption{Зависимости $q_{x^2}(\varepsilon)$ и $q_T(\varepsilon) $ системы Ван-дер-Поля}
+\label{atu:f:vdp_q1}
+\end{figure}
+
+Левый график соответствует такому набору параметров,
+при котором наблюдается периодическое и сложно-периодическое движение.
+При этом оба критерия подходят для синтеза системы идентификации, а
+критерий $q_T$ проявляет меньшую нелинейность.
+Правый график отображает случай, когда изменение параметра $\varepsilon$
+приводит к существенному изменению поведения.
+При $\varepsilon < 7 $ происходит ``захват частоты'',
+то есть возмущающий сигнал $u(t)$ ``навязывает'' свою частоту системе,
+что приводит к простой динамике и отсутствию зависимости $q_T$ от $\varepsilon$.
+Идентификация на данном участке невозможна, ввиду
+отсутствия влияния параметра на ``период''.
+Правая часть этого графика отображает постоянные переходы от
+сложных колебаний к хаосу и обратно. На зависимости $q_T(\varepsilon)$
+появляются изломы, что потенциально должно привести к снижению
+точности идентификации на фоне общей работоспособности.
+График зависимости $q_{x^2}(\varepsilon)$ имеет экстремальный характер,
+что позволяет использовать этот критерий только на тех диапазонах $\varepsilon$,
+на которых наблюдается монотонность.
+
+Рассмотрим зависимости $q_T(\varepsilon,U_{in})$ и $q_{x^2}(\varepsilon,U_{in})$
+для различных значений $\omega_{in}$.
+На  рис.~\ref{atu:f:vdp_q2_027}
+представлены эти зависимости при $\omega_{in}=0.27$.
+
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_q_2d-p_qT_ome_0x27.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_q_2d-p_qx2_ome_0x27.png}
+\end{center}
+  \caption{Зависимости $q_T(\varepsilon,U_{in})$ и $q_{x^2}(\varepsilon,U_{in})$  при $\omega_{in}=0.27$}
+\label{atu:f:vdp_q2_027}
+\end{figure}
+
+При высоких значениях $U_{in}$ происходит захват частоты,
+график зависимости $q_T(\varepsilon,U_{in})$ в этой области
+представляет собой плоскую поверхность, что свидетельствует
+о неприменимости критерия в этих условиях. При малых значения $U_{in}$,
+наоборот, наблюдается достаточно близкая к линейной зависимость.
+В промежутке между двумя этими областями возможности
+идентификации с использованием данного критерия существуют, но ограничены.
+Критерий $q_{x^2}$ при этих же условиях имеет несколько другие ограничения.
+Идентификация затруднена в области ``оврага'', который соответствует
+переходному режиму на предыдущем графике.
+Как в области низких, так и в области высоких значений
+$U_{in}$ идентификация возможна.
+
+На  рис.~\ref{atu:f:vdp_q2_120}
+представлены поверхности критериев при $\omega_{in}=1.2$.
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_q_2d-p_qT_ome_1x20.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_q_2d-p_qx2_ome_1x20.png}
+\end{center}
+  \caption{Зависимости $q_T(\varepsilon,U_{in})$ и $q_{x^2}(\varepsilon,U_{in})$  при $\omega_{in}=1.2$}
+\label{atu:f:vdp_q2_120}
+\end{figure}
+
+На зависимости $q_T(\varepsilon,U_{in})$ в этом случае также виден
+плоский участок, соответствующий режиму захвата частоты.
+Но большая часть этой зависимости свидетельствует о том, что
+идентификация возможна, и при этом скорее всего
+будет наблюдаться увеличение ошибки идентификации из-за неравномерности графика.
+Напротив, зависимость $q_T(\varepsilon,U_{in})$ проявляет
+мультимодальный характер, что позволяет проводить идентификацию только в узких диапазонах.
+
+Таким образом, установлено, что ни один из рассматриваемых критериев не
+обеспечивает возможность идентификации при любых значениях параметров.
+Однако, наибольший диапазон работоспособности продемонстрировал критерий $q_{T}$.
+Он и будет использован в дальнейших исследованиях. При этом при постановке задачи
+будем избегать режимов, на которых происходит захват частоты.
+
+
+
+
+
+
+
+
 
 % }}}2
 
