Add id picures for Van-der-Pol.

--- a/p5/vdp_testsys.tex
+++ b/p5/vdp_testsys.tex
@@ -281,6 +281,77 @@ $U_{in}$ идентификация возможна.
 
 \subsection{Тестовая задача идентификации для системы Ван-дер-Поля}  % {{{2
 
+При синтеза системы идентификации использовалась группа методов ``ql3rlWvnAAW''.
+С учётом выбора критерия $q_{T}$ при постановке задачи идентификации
+параметры выбирались с учётом диапазона работоспособности этого критерия.
+Первая группа значения параметров: $U_{in}=0.3$, $\omega_{in}=0.27$, $ \varepsilon \in [1, 4 ]$.
+
+Рассмотрим процесс идентификации
+в квазистационарном случае,
+при медленном изменении параметра~(\ref{atu:eq:po_t_ramp}), $p_0=1$, $U_p=2$.
+Динамика агентов и различных способов задания $p_\mathrm{id}$
+представлена на рис.~\ref{atu:f:vdp_id1_ramp}.
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_id-p_t_pi_ql3rlWvnAAW_ramp.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_id-p_t_p_ql3rlWvnAAW_ramp.png}
+\end{center}
+  \caption{Динамика агентов и идентифицируемого значения для системы Ван-дер-Поля при условии (\ref{atu:eq:po_t_ramp})}
+\label{atu:f:vdp_id1_ramp}
+\end{figure}
+
+За исключением начального участка, на котором происходит стабилизация
+состояния самой системы идентификации, агенты демонстрируют корректное поведение,
+сопровождая медленно изменяющиеся значение параметра $\varepsilon$.
+Как следствие, все методы определения $p_\mathrm{id}$
+позволяют достаточно точно провести идентификацию.
+Небольшие колебания обусловлены тем, что на самом деле
+система не в полной мере может быть названа квазистационарной,
+из-за большого времени усреднения критерия.
+Участков, на которых нарушался бы процесс идентификации,
+или же существенно росла ошибка, не наблюдается.
+
+Рассмотрим динамку процесса идентификации
+(рис.~\ref{atu:f:vdp_id1_sign})
+при условиях (\ref{atu:eq:po_t_sign}), $p_0=2$, $U_p=0.8$, $\omega_{in}=0.01047$.
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_id-p_t_pi_ql3rlWvnAAW_sign.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_id-p_t_p_ql3rlWvnAAW_sign.png}
+\end{center}
+  \caption{Динамика агентов и идентифицируемого значения для системы Ван-дер-Поля при условии (\ref{atu:eq:po_t_sign})}
+\label{atu:f:vdp_id1_sign}
+\end{figure}
+
+Как уже наблюдалось, все методы определения $p_\mathrm{id}$
+на уровне координатора поиска дают схожие результаты.
+Следует отметить заметные колебания на первой половине периода изменения
+параметра, по сравнению с третей. Избыточные колебания на начальном этапе можно
+уменьшить путём предварительной настройки элементов усреднения критерия.
+Однако, для такой настройки необходима дополнительная информация,
+которая неизвестна a priori.
+
+На рис.~\ref{atu:f:vdp_id1_sin}
+представлены аналогичные результаты,
+но в случае плавного изменения параметра~(\ref{atu:eq:po_t_sin}).
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_id-p_t_pi_ql3rlWvnAAW_sin.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/vdp/vdp_id-p_t_p_ql3rlWvnAAW_sin.png}
+\end{center}
+  \caption{Динамика агентов и идентифицируемого значения для системы Ван-дер-Поля при условии (\ref{atu:eq:po_t_sin})}
+\label{atu:f:vdp_id1_sin}
+\end{figure}
+
+Ошибка идентификации в этом случае существенно меньше, при сохраняющихся
+колебаниях на начальном этапе.
+
 % }}}2
 
 
