Add conclusions to Van-der-Pol.

--- a/p5/vdp_testsys.tex
+++ b/p5/vdp_testsys.tex
@@ -421,7 +421,26 @@ $U_{in}$ идентификация возможна.
 \label{atu:f:vdp_e_v_f}
 \end{figure}
 
+Если в динамике идентифицируемого параметра нет
+резких изменений (правый график), то
+зависимости имеют классический вид,
+существует такое значение $v_f$, при котором наблюдается
+минимум ошибки. В том же случае, когда зависимость представляет собой
+зависимость с разрывами (\ref{atu:eq:po_t_sign}),
+то зависимость получается слабая и неоднозначная.
+Это связано с тем, что перестройка положений агентов
+хоть и происходит, но не приводит к уменьшению ошибки
+ввиду того, что время реакции критерия становится одного порядка
+с временем реакции на изменение параметра.
+
+
 Влияние коэффициента $k_e$ (рис.~\ref{atu:f:vdp_e_k_e})
+для данной системы также существенно зависит от динамики
+параметра, и по той же причине.
+Если динамика параметра задана как (\ref{atu:eq:po_t_sin}),
+то существует экстремум, соответствующий оптимальному распределению агентов.
+При скачкообразных изменениях параметра экстремум практически незаметен
+на общем фоне.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -435,6 +454,12 @@ $U_{in}$ идентификация возможна.
 
 Влияние параметра $k_{nl}$ (рис.~\ref{atu:f:vdp_e_k_nl})
 отображает свойства множества агентов как ансамбля.
+В отличие от двух предыдущих зависимостей,
+минимум ошибки идентификации наблюдается для двух
+способов определения динамики параметров, то есть
+корректное взаимодействие между агентами необходимо
+для получения результата даже в тех случаях,
+когда собственно перемещение агентов не оправдано.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -446,9 +471,10 @@ $U_{in}$ идентификация возможна.
 \label{atu:f:vdp_e_k_nl}
 \end{figure}
 
-Наличие искусственных ограничений на перемещения агентов
-приводит к тому, что влияние коэффициента $k_{cl}$
-становится минимальным (рис.~\ref{atu:f:vdp_e_k_cl}).
+Как и в предыдущем случае,
+искусственные ограничения на перемещения агентов
+практически нивелирует влияние коэффициента $k_{cl}$ (рис.~\ref{atu:f:vdp_e_k_cl}).
+В этих условиях силу $f_c$ имеет смысл вообще не определять.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -460,11 +486,50 @@ $U_{in}$ идентификация возможна.
 \label{atu:f:vdp_e_k_cl}
 \end{figure}
 
+На  рис.~\ref{atu:f:vdp_e_varepsilon_2} представлена зависимость ошибки идентификации
+от величины самого параметра $\varepsilon$ в условиях,
+когда постоянно чередуются хаотические и сложно-периодические режимы.
+В этих условиях ошибка идентификации возрастает,
+но сама система идентификации остаётся работоспособной.
+
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.60\textwidth]{p/cha/vdp/vdp_id2-p_p_e_ql3rlWvnAAW_scan.png}
+\end{center}
+  \caption{Зависимости $\bar{e}(\varepsilon)$ для системы Ван-дер-Поля в условиях чередования режимов колебаний}
+\label{atu:f:vdp_e_varepsilon_2}
+\end{figure}
+
 % }}}2
 
 \subsection{Выводы}  % {{{2
 
-Выводы
+Результаты моделирования
+процессов идентификации параметра ``$\varepsilon$''
+системы Ван-дер-Поля,
+позволяют в сделать следующие выводы:
+
+\begin{itemize}
+
+  \item
+    Наибольший диапазон примерности для этой системы
+    демонстрирует критерий $q_T$ с последующим усреднением.
+
+  \item
+    Не обнаружено критерия, который бы был работоспособен во всей
+    области определения параметров, в связи с разнообразием динамики,
+    которую проявляет система.
+
+  \item
+    Группа методов ql3rlWvnAAW показала свою хорошую работоспособность,
+    даже в условиях чередования режимов колебаний.
+
+  \item
+    Параметры самой системы идентификации могут изменяться в достаточно широких
+    пределах без существенного увеличения ошибки идентификации.
+
+\end{itemize}
 
 % }}}2
 
