Add pure pics for Duffing.

--- a/p5/duff_testsys.tex
+++ b/p5/duff_testsys.tex
@@ -41,7 +41,7 @@ $ \beta \approx 2 $.
 
 Остальные параметры:
 \(U_{in}=1\), \(\omega_{in}=1\),
-\(c_0 = 0.05\), \( \Omega_0 = 1 \).
+\(c_0 = 0.05\), \( \alpha = -1 \).
 
 \begin{figure}[htb!]
 \centerline{\includegraphics[width=0.5\textwidth]{p/cha/duff_phase.pdf} }
