--- a/p5/duff_testsys.tex
+++ b/p5/duff_testsys.tex
@@ -269,7 +269,13 @@ $p_0=2$, $U_p=0.8$, $\omega_{in}=0.01047$
 
 \subsection{Влияние параметров системы идентификации на ошибку идентификации для системы Дуффинга}  % {{{2
 
-Эти зависимости представлены на рис.~\ref{atu:f:duff_e_a_q}.
+На первый взгляд, отсутствие ограничения на спектр системы снизу
+должно отразится на зависимости ошибок идентификации
+от параметра усреднения критерия $a_q$.
+Однако, эти зависимости, полученные в результате численного эксперимента, представленные на рис.~\ref{atu:f:duff_e_a_q},
+свидетельствуют об обратном. Вид этих зависимостей является вполне типичным
+для подобных систем. Положение минимума ошибки определяется
+динамикой идентифицируемого параметра.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -281,6 +287,9 @@ $p_0=2$, $U_p=0.8$, $\omega_{in}=0.01047$
 \label{atu:f:duff_e_a_q}
 \end{figure}
 
+Зависимости $\bar{e}(q_\gamma)$ для системы Дуффинга,
+приведённые на рис.~\ref{atu:f:duff_e_q_gamma},
+также не выделяются ничем особенным.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -292,15 +301,36 @@ $p_0=2$, $U_p=0.8$, $\omega_{in}=0.01047$
 \label{atu:f:duff_e_q_gamma}
 \end{figure}
 
+При более слабо выраженной динамики параметра
+эффект избыточной чувствительности более выражен.
+Для сильно выраженной динамики наблюдается довольно
+странное явление --- неожиданно малую ошибку идентификации
+обеспечивает метод $p_{gc}$.
+
+Зависимости ошибки идентификации от коэффициента скорости $v_f$,
+представлены на рис.~\ref{atu:f:duff_e_v_f}.
+
 \begin{figure}[ht!]
 \begin{center}
   \includegraphics[width=0.49\textwidth]{p/cha/duff/duff_id-p_v_f_sign.png}
   \hfill
-  \includegraphics[width=0.49\textwidth]{p/cha/duff/duff_id-p_q_gamma_sin.png}
+  \includegraphics[width=0.49\textwidth]{p/cha/duff/duff_id-p_v_f_sin.png}
 \end{center}
   \caption{Зависимости $\bar{e}(v_f)$ для системы Дуффинга}
 \label{atu:f:duff_e_v_f}
 \end{figure}
+
+Вид этих зависимостей подчёркивает меньшую пользу от смещения агентов
+при выраженной динамике идентифицируемого параметра.
+Для синусоидальной зависимости (\ref{atu:eq:po_t_sin})
+максимальный выигрыш от смещения агентов
+достигает 120\%, для меандра --- не более 10\%.
+
+Зависимости $\bar{e}(k_e)$ для системы Дуффинга
+(рис.~\ref{atu:f:duff_e_k_e})
+демонстрируют схожее поведение, при этом
+этот коэффициент имеет косвенное влияние за скорость смещения агентов,
+основное влияние он оказывает на равновесное их положение.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -312,6 +342,12 @@ $p_0=2$, $U_p=0.8$, $\omega_{in}=0.01047$
 \label{atu:f:duff_e_k_e}
 \end{figure}
 
+Зависимости $\bar{e}(k_{nl})$ для системы Дуффинга
+(рис.~\ref{atu:f:duff_e_k_nl}),
+достаточно слабо выражены,
+ввиду уже упомянутых свойств системы.
+
+
 \begin{figure}[ht!]
 \begin{center}
   \includegraphics[width=0.49\textwidth]{p/cha/duff/duff_id-p_k_nl_sign.png}
@@ -321,6 +357,11 @@ $p_0=2$, $U_p=0.8$, $\omega_{in}=0.01047$
   \caption{Зависимости $\bar{e}(k_{nl})$ для системы Дуффинга}
 \label{atu:f:duff_e_k_nl}
 \end{figure}
+
+Влияние коэффициента $k_{cl}$ на ошибку идентификации,
+в условиях искусственных ограничений на смещение агентов,
+продолжает оставаться незначительным
+(рис.~\ref{atu:f:duff_e_k_cl}).
 
 \begin{figure}[ht!]
 \begin{center}
@@ -337,7 +378,30 @@ $p_0=2$, $U_p=0.8$, $\omega_{in}=0.01047$
 
 \subsection{Выводы}  % {{{2
 
-Выводы
+Результаты моделирования
+процессов идентификации параметра ``$\beta$''
+системы Дуффинга
+позволяют в сделать следующие выводы:
+
+\begin{itemize}
+
+  \item
+    Критерий $q_{x_{-2}}$ подходит для идентификации параметра ``$\beta$''
+    системы Дуффинга в широком диапазоне, соответствующие зависимости
+    проявляют слабую чувствительность к перестройке динамики системы.
+
+  \item
+    Наличие сплошного спектра системы, примыкающего к нулевой частоте,
+    усложняет задачу корректного усреднения критерия,
+    что приводит к высокочастотным колебаниям значения $p_\mathrm{id}$,
+    при ограниченной их амплитуде.
+
+  \item
+    Группа методов ql3rlWvnAAW в очередной раз показала свою хорошую работоспособность.
+
+
+\end{itemize}
+
 
 % }}}2
 
