--- a/p5/vdp_testsys.tex
+++ b/p5/vdp_testsys.tex
@@ -507,7 +507,7 @@ $U_{in}$ идентификация возможна.
 
 Результаты моделирования
 процессов идентификации параметра ``$\varepsilon$''
-системы Ван-дер-Поля,
+системы Ван-дер-Поля
 позволяют в сделать следующие выводы:
 
 \begin{itemize}
